# OpenLive4Cam

./: CMakeLists.txt  README
capture/: CMakeLists.txt  capture.h  main.c
capture/include/: camera.h  capture.h
capture/src/: CMakeLists.txt  camera.cpp  capture.cpp  main.cpp
doc/capture/: Doxyfile
doc/copying/: opencv_LICENSE
doc/encoder/: Doxyfile
doc/gui/: Doxyfile
doc/interface/: Doxyfile
doc/server/: Doxyfile
encoder/: CMakeLists.txt
encoder/filters/: filters.c
encoder/include/: encoder.h  input.h  output.h  socket.h  x264.h
encoder/src/: CMakeLists.txt  encoder.c  encoder.cpp  raw_input.c  rtp_output.c  socket.c  x264.c
encoder/x264/: Makefile  config.h  config.mak  log.txt  x264.c  x264.pc  x264cli.h
encoder/x264/common/: common.h
encoder/x264/filters/video/: video.c  video.h
encoder/x264/nbproject/: Package-Default.bash  configurations.xml  project.xml
encoder/x264/output/: output.h  rtp.c  sdp.c  socket.c  socket.h
gui/: CInterface.cpp  CInterface.h  CMakeLists.txt  OpenLive4Cam.vcxproj  capturecom.cpp  capturecom.h  encoderthread.cpp  encoderthread.h  gui.pro  interface.cpp  interface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serverthread.cpp  serverthread.h  videoview.cpp  videoview.h
interface/: CMakeLists.txt  frame.c  frame.h  interface.c  interface.h  mutex.c  mutex.h  picture.c  picture.h  test.c
interface/include/: SDL_config.h
interface/test/: CMakeLists.txt  test.c
server/: CMakeLists.txt
server/include/: EncoderDeviceSource.hh  H264VideoEncoderServerMediaSubsession.h  server.h
server/include/groupsock/: NetCommon.h
server/lib/: libBasicUsageEnvironment.lib  libUsageEnvironment.lib  libgroupsock.lib  libliveMedia.lib
server/src/: CMakeLists.txt  EncoderDeviceSource.cpp  H264VideoEncoderServerMediaSubsession.cpp  OnDemandRTSPServer.cpp  server.cpp
